WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226331
[GTK4] Scrollbar click doesn't work as expected when native scrollbars are off
https://bugs.webkit.org/show_bug.cgi?id=226331
Summary
[GTK4] Scrollbar click doesn't work as expected when native scrollbars are off
Alice Mikhaylenko
Reported
2021-05-27 07:04:53 PDT
Clicking the scrollbar just scrolls slightly in that direction instead of moving the slider under the pointer immediately and starting a drag.
Attachments
Patch
(2.60 KB, patch)
2021-07-10 15:08 PDT
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2021-07-10 14:54:54 PDT
Looks like it was fixed in
https://bugs.webkit.org/show_bug.cgi?id=210002
for GTK3, but that code path is never hit in GTK4 and we use ScrollbarThemeAdwaita directly, so it will have to be done there as well.
Alice Mikhaylenko
Comment 2
2021-07-10 15:08:28 PDT
Created
attachment 433278
[details]
Patch
EWS
Comment 3
2021-07-12 01:22:47 PDT
Committed
r279821
(
239582@main
): <
https://commits.webkit.org/239582@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433278
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug