[GTK4] Scrollbar click doesn't work as expected when native scrollbars are off https://bugs.webkit.org/show_bug.cgi?id=226331

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-07-12
Reviewed by Carlos Garcia Campos.

Make Adwaita scrollbar theme follow the GTK setting if possible.

* platform/adwaita/ScrollbarThemeAdwaita.cpp:
(WebCore::ScrollbarThemeAdwaita::handleMousePressEvent):

Canonical link: https://commits.webkit.org/239582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279821 268f45cc-cd09-0410-ab3c-d52691b4dbfc